- Issue Resolved: Files was not getting extracted in MAC os